tests/ui-tests/tests/cases/wrong-enum-type.stderr
error[E0308]: mismatched types
  --> $DIR/wrong-enum-type.rs:16:21
   |
16 |         pub status: CheckConclusionState,
   |                     ^^^^^^^^^^^^^^^^^^^^ expected enum `CheckStatusState`, found enum `schema::CheckConclusionState`
   |
   = note: expected struct `SelectionSet<'_, _, CheckStatusState>`
              found struct `SelectionSet<'static, _, schema::CheckConclusionState>`
